--- a/src/Evoq.Surfdude.ConsoleApp/Evoq.Surfdude.ConsoleApp.csproj
+++ b/src/Evoq.Surfdude.ConsoleApp/Evoq.Surfdude.ConsoleApp.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>Evoq</RootNamespace>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
