--- a/src/Evoq.Surfdude/Evoq.Surfdude.csproj
+++ b/src/Evoq.Surfdude/Evoq.Surfdude.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
     <RootNamespace>Evoq</RootNamespace>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
