Refactored to put the code that has knowledge of the media-type into its own lib

--- a/src/Evoq.Surfdude.ConsoleApp/Evoq.Surfdude.ConsoleApp.csproj
+++ b/src/Evoq.Surfdude.ConsoleApp/Evoq.Surfdude.ConsoleApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Evoq.Surfdude.SimpleJson\Evoq.Surfdude.SimpleJson.csproj" />
     <ProjectReference Include="..\Evoq.Surfdude\Evoq.Surfdude.csproj" />
   </ItemGroup>
 
