First draft of support for form inputs via get URL

--- a/src/Evoq.Surfdude.SimpleJson/Evoq.Surfdude.SimpleJson.csproj
+++ b/src/Evoq.Surfdude.SimpleJson/Evoq.Surfdude.SimpleJson.csproj
@@ -10,7 +10,9 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />  
+    <PackageReference Include="Flurl" Version="2.8.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="UriTemplate.Core" Version="1.0.2" />  
   </ItemGroup>
   
 </Project>
