--- a/src/Evoq.Surfdude/Evoq.Surfdude.csproj
+++ b/src/Evoq.Surfdude/Evoq.Surfdude.csproj
@@ -6,4 +6,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
