--- a/src/Evoq.Surfdude/Evoq.Surfdude.csproj
+++ b/src/Evoq.Surfdude/Evoq.Surfdude.csproj
@@ -4,10 +4,18 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Evoq</RootNamespace>
     <LangVersion>latest</LangVersion>
+
+    <title>Surfdude Hypermedia Client</title>
+    <description>A dynamic client for driving really RESTful APIs.</description>
+    <packageTags>rest;restful;api;refit</packageTags>
+    <packageId>Surfdude</packageId>
+
   </PropertyGroup>
 
   <ItemGroup>
+
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.0.0" />
+    
   </ItemGroup>
 
 </Project>
