--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,5 +1,5 @@
 pool:
-  vmImage: ''ubuntu-16.04' # 'vs2017-win2016' - https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml
+  vmImage: 'ubuntu-16.04' # 'vs2017-win2016' https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml
 
 steps:
 - task: DeleteFiles@1
