--- a/src/Evoq.Surfdude/Evoq.Surfdude.csproj
+++ b/src/Evoq.Surfdude/Evoq.Surfdude.csproj
@@ -5,10 +5,12 @@
     <RootNamespace>Evoq</RootNamespace>
     <LangVersion>latest</LangVersion>
 
-    <title>Surfdude Hypermedia Client</title>
-    <description>A dynamic client for driving really RESTful APIs.</description>
-    <packageTags>rest;restful;api;refit</packageTags>
+    <title>Surfdude Hypermedia Kit</title>
+    <description>Surfdude dynamically drives really RESTful APIs. This package just contains abstractions and parts for building a Surfdude API client. Please search for Surfdude client packages that work with specific media-types.</description>
+    <packageTags>rest;restful;api;refit;hateoas;hypertext;hypermedia</packageTags>
     <packageId>Surfdude</packageId>
+    <packageVersion>1.0.1</packageVersion>
+    <repositoryUrl>https://github.com/lukepuplett/surfdude-csharp</repositoryUrl>
 
   </PropertyGroup>
 
