--- a/src/Evoq.Surfdude.SimpleJson/Evoq.Surfdude.SimpleJson.csproj
+++ b/src/Evoq.Surfdude.SimpleJson/Evoq.Surfdude.SimpleJson.csproj
@@ -7,7 +7,7 @@
     <title>Surfdude for SimpleJson</title>
     <description>Surfdude dynamically drives really RESTful APIs. This package works with APIs that return SimpleJson.</description>
     <packageTags>rest;restful;api;refit;hateoas;hypertext;hypermedia;json</packageTags>
-    <packageId>Surfude</packageId>
+    <packageId>Surfude.SimpleJson.Client</packageId>
     <packageVersion>1.0.1</packageVersion>
     <repositoryUrl>https://github.com/lukepuplett/surfdude-csharp</repositoryUrl>
 
