--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -38,7 +38,7 @@ steps:
   inputs:
     targetType: 'filePath'
     filePath: 'build/Publish-ToNuGet.ps1'
-    arguments: '-PackageSpec $(Build.ArtifactStagingDirectory)\Surfdude*.nupkg -ApiKey $(azure-pipelines-evoq-nuget-apikey)'
+    arguments: '-PackageSpec $(Build.ArtifactStagingDirectory)/Surfdude*.nupkg -ApiKey $(azure-pipelines-evoq-nuget-apikey)'
 
 #- task: DotNetCoreCLI@2
 #  displayName: 'Push this package to the feed'
